<resources>
    <string name="app_name">WebService3</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="companyname">Company Name</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="colon">:</string>
</resources>
