<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/cv_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_margin="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
        >
            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvid"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/id"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_id"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:textColor="#566573"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvname"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/name"
                        android:textColor="#566573"
                />

                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_name"
                        android:textSize="15sp"
                        android:textColor="#566573"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvusername"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/username"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_username"
                        android:textSize="15sp"
                        android:textColor="#566573"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvaddress"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/address"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_address"
                        android:textSize="15sp"
                        android:textColor="#566573"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvemail"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/email"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_email"
                        android:textSize="15sp"
                        android:autoLink="email"
                        android:textColorLink="@android:color/holo_blue_dark"
                        android:textColor="#566573"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_comapanyname"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:text="@string/companyname"
                        android:textStyle="bold"
                        android:textColor="#566573"
                        android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_comapany_name"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:textColor="#566573"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvphone"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:text="@string/phone"
                        android:textColor="#566573"
                />

                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_phone"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:textColorLink="@android:color/holo_blue_dark"
                        android:autoLink="phone"
                        android:textColor="#566573"
                        android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvwebsite"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="@string/website"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView

                        android:layout_width="0dp"
                        android:layout_weight="0.1"
                        android:layout_height="wrap_content"
                        android:text="@string/colon"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#566573"
                />
                <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_website"
                        android:autoLink="web"
                        android:textColor="#566573"
                        android:textColorLink="@android:color/holo_blue_dark"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>